RESOLVED FIXED12163
SVG text does not appear in a scrolling <div>
https://bugs.webkit.org/show_bug.cgi?id=12163
Summary SVG text does not appear in a scrolling <div>
Andreas Känner
Reported 2007-01-08 09:21:57 PST
If a SVG area is enclosed by a div and if this div shows only a part of the SVG area (you need to scroll around to see hidden parts), then the hidden parts will not become visible if you scroll around. This concerns text elements. See the URL for an example.
Attachments
First attempt (1.97 KB, patch)
2007-04-25 02:51 PDT, Rob Buis
darin: review+
Now with testcase (454.05 KB, patch)
2007-04-25 10:28 PDT, Rob Buis
darin: review+
Eric Seidel (no email)
Comment 1 2007-01-14 20:52:51 PST
That's really cool! :)
Rob Buis
Comment 2 2007-04-25 02:51:09 PDT
Created attachment 14172 [details] First attempt This patch should do it. I don't see a way for creating a layout test, maybe best to use the original testcase as a manual test? Cheers, Rob.
Nikolas Zimmermann
Comment 3 2007-04-25 02:59:04 PDT
Nice patch, almost r+! > This patch should do it. I don't see a way for creating a layout test, maybe > best to use the original testcase as a manual test? I think it's possible to create a testcase for that though. You could insert an anchor as last element, and scroll to that element, no? (window.location = '#someAnchor') Greetings, Niko
Darin Adler
Comment 4 2007-04-25 08:04:27 PDT
Comment on attachment 14172 [details] First attempt r=me
Rob Buis
Comment 5 2007-04-25 10:28:02 PDT
Created attachment 14177 [details] Now with testcase I know the previous patch got okayed, but I think we should consider this one which has the testcase converted to a layout test. Thnx to WildFox for the comment, I simply didnt see the way to do a layout test at the time. Cheers, Rob.
Darin Adler
Comment 6 2007-04-25 10:29:44 PDT
Comment on attachment 14177 [details] Now with testcase Great! Even better.
Rob Buis
Comment 7 2007-04-25 11:46:41 PDT
Landed in r21087.
Note You need to log in before you can comment on or make changes to this bug.