        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=12163
        SVG text does not appear in a scrolling <div>

        Make sure SVG text is painted when scrolling by taking into account the
relative offset of the non-SVG parent in the paintInfo rect.



git-svn-id: svn://svn.chromium.org/blink/trunk@21087 bbb929c8-8fbe-4397-9dbb-9b2b20218538