third_party/WebKit/WebCore/rendering/RenderSVGContainer.cpp
@@ -26,15 +26,15 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #if ENABLE(SVG)
 #include "RenderSVGContainer.h"
 
-#include "SVGResourceClipper.h"
-#include "SVGResourceFilter.h"
-#include "SVGResourceMasker.h"
-#include "SVGStyledElement.h"
-#include "SVGURIReference.h"
 #include "GraphicsContext.h"
 #include "SVGLength.h"
 #include "SVGMarkerElement.h"
+#include "SVGResourceClipper.h"
+#include "SVGResourceFilter.h"
+#include "SVGResourceMasker.h"
 #include "SVGSVGElement.h"
+#include "SVGStyledElement.h"
+#include "SVGURIReference.h"
 
 namespace WebCore {
 
@@ -167,8 +167,10 @@ void RenderSVGContainer::paint(PaintInfo& paintInfo, int parentX, int parentY)
         origin.move(m_x, m_y);
         origin.move(borderLeft(), borderTop());
         origin.move(paddingLeft(), paddingTop());
-        if (origin.x() || origin.y())
+        if (origin.x() || origin.y()) {
             paintInfo.context->concatCTM(AffineTransform().translate(origin.x(), origin.y()));
+            paintInfo.rect.move(-origin.x(), -origin.y());
+        }
         parentX = parentY = 0;
     } else {
         // Only the root <svg> element should need any translations using the HTML/CSS system
